5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1800_2563.log
== TEST (2019-06-13 08:34:29) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))            # Médias Finais
# Laço de termino "While"
while (size(MF) > 1):
	m = 0
	for i in v range(size(v)):
		if (i >= 5) and (i < 7):
			m = m + 1
		print(m)
		v = array(eval(input("Vetor: ")))
-- ERROR:
File "XXXX", line 8
    for i in v range(size(v)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:34:36) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))            # Médias Finais
# Laço de termino "While"
while (size(MF) > 1):
	m = 0
	for i in v (size(v)):
		if (i >= 5) and (i < 7):
			m = m + 1
		print(m)
		v = array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:35:00) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))            # Médias Finais
# Laço de termino "While"
while (size(v) > 1):
	m = 0
	for i in v (size(v)):
		if (i >= 5) and (i < 7):
			m = m + 1
		print(m)
		v = array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:35:24) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))            # Médias Finais
# Laço de termino "While"
while (size(v) > 1):
	m = 0
	for i in range(size(v)):
		if (i >= 5) and (i < 7):
			m = m + 1
		print(m)
		v = array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:35:55) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))            # Médias Finais
# Laço de termino "While"
while (size(v) > 1):
	m = 0
	for i in range(size(v)):
		if (i >= 5) and (i < 7):
			m = m + 1
		print(m)
		v = array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:36:12) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))            # Médias Finais
# Laço de termino "While"
while (size(v) > 1):
	m = 0
	for i in v:
		if (i >= 5) and (i < 7):
			m = m + 1
		print(m)
		v = array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:36:22) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))            # Médias Finais
# Laço de termino "While"
while (size(v) > 1):
	m = 0
	for i in v:
		if (i >= 5) and (i < 7):
			m = m + 1
		print(m)
		v = array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:37:36) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))            # Médias Finais
# Laço de termino "While"
while (size(v) > 1):
	m = 0
	for i in v:
		if (i >= 5) and (i < 7):
			m = m + 1
	print(m)
	v = array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:37:53) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))            # Médias Finais
# Laço de termino "While"
while (size(v) > 1):
	m = 0
	for i in v:
		if (i >= 5) and (i < 7):
			m = m + 1
	print(m)
	v = array(eval(input("Vetor: ")))
-- EXECUTION TIME:
1.12407
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:38:39) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))            # Médias Finais
# Laço de termino "While"
while (size(v) > 1):
	m = 0
	for i in v:
		if (i >= 5) and (i < 7):
			m = m + 1
	# Saída
	print(m)
	# Repetição
	v = array(eval(input("Vetor: ")))
-- EXECUTION TIME:
1.11606
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
